# backend/api/schemas/github.py
@@ -1,0 +1,12 @@
+from pydantic import BaseModel
+
+from airas.core.types.github import GitHubConfig
+
+
+class PushGitHubRequestBody(BaseModel):
+    github_config: GitHubConfig
+    push_files: dict[str, str]
+
+
+class PushGitHubResponseBody(BaseModel):
+    is_file_pushed: bool
